InsuranceOrg/force-app/main/default/objects/vlocity_ins__RuleFilter__c/fields/vlocity_ins__ActionTaken__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ActionTaken__c</fullName>
    <label>Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policy Action</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>Qualify</fullName>
            </value>
            <value>
                <fullName>Do Not Qualify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>