InsuranceOrg/force-app/main/default/objects/vlocity_ins__RuleFilter__c/fields/vlocity_ins__ContextActionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContextActionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Context Action</label>
    <referenceTo>vlocity_ins__ContextAction__c</referenceTo>
    <relationshipLabel>Rule Filters</relationshipLabel>
    <relationshipName>RuleFilters</relationshipName>
    <type>Lookup</type>
</CustomField>