InsuranceOrg/force-app/main/default/objects/vlocity_ins__RuleFilter__c/fields/vlocity_ins__EntityFilterId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EntityFilterId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The entity filter Id</description>
    <label>Entity Filter</label>
    <referenceTo>vlocity_ins__EntityFilter__c</referenceTo>
    <relationshipLabel>Rule Filters</relationshipLabel>
    <relationshipName>RuleFilters</relationshipName>
    <type>Lookup</type>
</CustomField>