InsuranceOrg/force-app/main/default/objects/vlocity_ins__RuleFilter__c/fields/vlocity_ins__RuleId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RuleId__c</fullName>
    <label>Rule</label>
    <referenceTo>vlocity_ins__Rule__c</referenceTo>
    <relationshipLabel>Rule Filters</relationshipLabel>
    <relationshipName>RuleFilters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>